# 3DCellSegDA

./: 3d_style_transfer.py  README.md  pyproject.toml  train_multipledatasets.py  train_script.py
cellSegDA/: 3d_style_transfer.py  train_adda.py  utils.py
docs/: index.html  search.json
notebooks/: 3d_cell_segmentation_demo.ipynb  3d_style_transfer_demo.ipynb
